<resources>
    <string name="app_name">JesusUtilProject</string>
    <string name="create_share_card">CREATE SHARE CARD</string>
    <string name="share_card_tip_text">长按扫码预预览社群内容 \n 和星主关系更近一步</string>
    <string name="share_card_subtitle">Hi Android</string>
    <string name="share_card_title">星主：XXX</string>
    <string name="share_card_tool_bar_name">知识星球</string>
    <string name="main_share_card">生成分享卡片功能</string>
    <string name="animation_test">动画测试</string>
    <string name="transition">转场动画</string>
    <string name="a_text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="fragment_shared">Fragment分享元素</string>
    <string name="activity_shared">Activity分享元素</string>
    <string name="activity_transition">Activity转场动画</string>
    <string name="transition_share">shareName</string>
    <string name="transition_share2">shareName2</string>
    <string name="anim_property">属性动画</string>
    <string name="anim_property2">属性动画2</string>
    <string name="anim_layout">LayoutAnimation</string>
    <string name="shortcuts">系统桌面快捷方式</string>
    <string name="static_disabled_message">静态快捷方式已被禁用</string>
    <string name="static_shortcut_long_label">静态快捷方式详情</string>
    <string name="static_shortcut_short_label">静态快捷方式</string>
    <string name="dynamic_shortcut_long_label_1">动态快捷方式1详情</string>
    <string name="dynamic_shortcut_short_label_1">动态快捷方式1</string>
    <string name="dynamic_shortcut_long_label_2">动态快捷方式2详情</string>
    <string name="dynamic_shortcut_short_label_2">动态快捷方式2</string>
    <string name="set_dynamic_shortcuts">setDynamicShortcuts</string>
    <string name="remove_dynamic_shortcuts">RemoveDynamicShortcuts</string>
    <string name="set_pinned_shortcuts">setPinnedShortcuts</string>
    <string name="dynamic_pinned_long_label_2">桌面快捷方式2详情</string>
    <string name="dynamic_pinned_short_label_2">桌面快捷方式2</string>
    <string name="set_more_dynamic_shortcuts">setMoreShortcutIntent</string>
    <string name="property_login_hint_account">账号/用户名/邮箱</string>
    <string name="property_login_hint_password">密码</string>
    <string name="property_login">Login</string>
    <string name="sign_up">Sign up</string>
</resources>
