<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".transition.TransitionMenuActivity">

    <Button
        android:id="@+id/transition_activity_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_transition"/>

    <Button
        android:id="@+id/transition_shared_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_share"
        android:text="@string/activity_shared"/>

    <Button
        android:id="@+id/transition_shared_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_shared"/>

</LinearLayout>