<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".animation_test.AnimPageActivity">

    <Button
        android:id="@+id/anim_btn_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anim_property"/>

    <Button
        android:id="@+id/anim_btn_property2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anim_property2"/>

    <Button
        android:id="@+id/anim_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anim_layout"/>

</LinearLayout>