<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".shortcuts.ShortcutsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:gravity="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_set_dynamic_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_dynamic_shortcuts"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btn_remove_dynamic_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/remove_dynamic_shortcuts"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btn_set_pinned_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_pinned_shortcuts"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btn_set_more_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_more_dynamic_shortcuts"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>